# practice-langchain

./: .gitignore  README.md  chat_history.json  info.md  main.py  pyproject.toml
1.models/: 1.open_source_model.py  2.hugging_face_model.py
2.parsers/: 3.pydantic_parser.py
3.prompts/: 2.chat_template.py  6.chatbot_with_memory_with_prompt_template.py  info.md
4.rag/: info.md
4.rag/1.text_loaders/: docx_loader.py  pdf_loader.py
4.rag/2.chunking/: document_based.py
4.rag/2.text_splitters/: length_based.py  text_structure_based.py
4.rag/3.vector_store/: chromadb_store.py
4.rag/4.retrievers/by_data_source/: vector_store_retriever.py  wikipedia_retriever.py
4.rag/4.retrievers/by_search_strategy/: contextual_compression.py  mmr.py  multi_query.py
4.rag/5.augmentation_generation/: augment_generate.py
4.rag/6.evaluation/: evaluate.py  info.md  opik_evaluate.py  opik_metrics.py  opik_with_ragas.py
4.runnables/: 1.sequential_runnable.py  3.passthrough_runnable.py  info.md
5.runnables/: 2.parallel_runnable.py  4.conditional_runnable.py
5.tools/: 1.tool_decorator.py  3.base_tool.py
6.agents/: info.md
6.tools/: 2.structured_tool.py  4.built_in_tool.py  5.tool_calling_with_llm.py  info.md
7.agents/: agent_with_tool_1.py  agent_with_tool_2.py
models/: google_model.py  hugging_face_model.py  info.md
parsers/: 1.structured_output.py  2.string_parser.py  info.md
prompts/: 1.simple_template.py  3.chatbot_without_memory.py  4.chatbot_with_memory.py  chatbot_no_memory_with_prompt_template.py  chatbot_with_memory_with_prompt_template.py
